# molten

./: .env.example  .gitignore  application.example.yml
bot/: README.md  pyproject.toml
bot/src/molten/: __main__.py  bot.py  player.py
bot/src/molten/cogs/: melted.py
bot/src/molten/components/: playing.py  track_list.py
